--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,5 @@
-<div class="button w-100 my-2">
-  <%= link_to 'New Note', new_note_path %>
+<div>
+  <%= link_to 'New Note', new_note_path, class: 'btn-primary w-100 my-2' %>
 </div>
 
 <% @notes.each do |note| %>
