--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="text-center">
+  <h1>Noticed</h1>
+  <h3>For your simple note-taking needs</h3>
+
+  <%= link_to "Get Started!!!", notes_path, class: 'btn btn-secondary w-100' %>
+</div>
