--- a/app/assets/stylesheets/_notes.scss
+++ b/app/assets/stylesheets/_notes.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Notes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+a {
+  color: gray;
+  &:hover {
+    color: white;
+  }
+}
+
+.lighter-background {
+  background-color: rgba(255, 255, 255, 0.3)
+}
