--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,34 +1,64 @@
+<%= form_tag notes_path, method: :get, class: 'row' do %>
+  <div class="col-9">
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      placeholder: "Find a Note"
+    %>
+  </div>
+  <div class="col-3">
+    <%= submit_tag "Search", class: "btn btn-primary w-100" %>
+  </div>
+<% end %>
+
 <div>
-  <%= link_to 'New Note', new_note_path, class: 'btn-primary w-100 my-2' %>
+  <%= link_to 'New Note', new_note_path, class: 'btn btn-primary w-100 my-2' %>
 </div>
 
 <div class="row">
   <% @notes.each do |note| %>
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-3 ">
-      <div class="card-header row justify-content-between">
-        <div class='col-6'>
-          <h5>Due to: <%= note.due_date %></h5>
+    <% colour = 'bg-success' if note.priority == 'Low' %>
+    <% colour = 'bg-info' if note.priority == 'Medium' %>
+    <% colour = 'bg-danger' if note.priority == 'High' %>
+    <div class="p-1 col-12 col-sm-6 col-md-4 col-lg-3">
+      <div class="card p-2 <%= colour %>">
+        <div class=" p-3 row justify-content-between">
+          <div class='col-9'>
+            Due to: <%= note.due_date.strftime("%d/%b/%Y") %>
+          </div>
+          <div class="col-3 p-0 d-flex justify-content-around">
+            <%= link_to edit_note_path(note) do %>
+              <i class="fas fa-pen"></i>
+            <% end %>
+            <%= link_to note_path(note), method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <i class="fas fa-trash-alt"></i>
+            <% end %>
+          </div>
         </div>
-        <div class="options col-6">
-          <%= link_to edit_note_path(note) do %>
-            <i class="fas fa-pen"></i>
-          <% end %>
-          <%= link_to note_path(note), method: :delete, data: { confirm: 'Are you sure?' } do %>
-            <i class="fas fa-trash-alt"></i>
-          <% end %>
-        </div>
-      </div>
-      <div class="card-body">
-        <div class="card-title">
-          <%= note.title %>
-        </div>
-        <div class="card-subtitle mb-2 text-muted">
-          <%= note.priority %>
-        </div>
-        <div class="card-text">
-          <%= note.description %>
+        <div class="card-body lighter-background">
+          <div class="card-title">
+            <h5 class="border-bottom border-dark"><%= note.title %></h5>
+          </div>
+          <div class="card-subtitle mb-2 text-muted">
+            <p>Priority: <%= note.priority %></p>
+          </div>
+          <div class="card-text">
+            <%= note.description %>
+          </div>
         </div>
       </div>
     </div>
   <% end %>
+</div>
+
+<div class="footer row">
+  <div class="col-4 p-2">
+  <%= link_to "Home", root_path, class: 'btn btn-light w-100' %>
+  </div>
+  <div class="col-4 p-2">
+  <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn btn-light w-100' %>
+  </div>
+  <div class="col-4 p-2">
+  <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn btn-light w-100' %>
+  </div>
 </div>
